Correct python version

--- a/README.html
+++ b/README.html
@@ -372,7 +372,7 @@ use.</li>
 <div class="section" id="how-to-install">
 <h1>How to install</h1>
 <p>biotrack is available as a Python package. Istallation requires
-setuptools and is tested for Python 2.7.6 and higher.</p>
+setuptools and is tested for Python 2.7.6 and 2.7.11.</p>
 <p>Uncompress the tar.gz file and cd inside it. (If you are reading this
 you probably already have.)</p>
 <p>To run tests before installing</p>
@@ -384,9 +384,7 @@ python setup.py install</blockquote>
 <p>To see that biotrack (0.1) is installed.</p>
 <blockquote>
 pip list</blockquote>
-</div>
-<div class="section" id="to-uninstall">
-<h1>To uninstall</h1>
+<p>To uninstall</p>
 <blockquote>
 pip uninstall biotrack</blockquote>
 </div>
@@ -428,7 +426,7 @@ UniProt accession, version, other fields...</blockquote>
 <p>Other fields are ignored by the parser.</p>
 </div>
 <div class="section" id="issues">
-<h1>Issues:</h1>
+<h1>Issues</h1>
 <ul class="simple">
 <li>Currently no exception handling for non-existant UniProt entries.<ul>
 <li>Future and non-existant versions will cause a crash.</li>
